# TrustChain

./: package-lock.json  package.json
OSAPROJECT/DBConnection/: Cargo.toml
OSAPROJECT/DBConnection/Fraud_Checker/: fraud_check.py
OSAPROJECT/DBConnection/src/: db.rs  main.rs
OSAPROJECT/frontend/: package-lock.json  package.json
OSAPROJECT/frontend/pages/: create-transaction.tsx  dashboard.tsx  forgot-password.tsx  login.tsx  products.tsx  register.tsx  reset-password.js  transactions.tsx  view-transactions.tsx
OSAPROJECT/frontend/styles/: dashboard.css  login.css  products.css  transactions.css
