[package]
name = "DBConnection"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
actix-web = "4.0.0-beta.8"
actix-rt = "2.5.0"
serde_derive = "1.0"
reqwest = { version = "0.12.15", features = ["json"] }
